# towr

robots/xpp_a1/: CMakeLists.txt  package.xml
robots/xpp_a1/include/xpp_a1/: a1leg_inverse_kinematics.h  inverse_kinematics_a1_4.h
robots/xpp_a1/launch/: a1.launch
robots/xpp_a1/src/: a1leg_inverse_kinematics.cc  inverse_kinematics_a1_4.cc
robots/xpp_a1/src/exe/: urdf_visualizer_a1.cc
robots/xpp_a1/urdf/: a1.urdf
towr/: CMakeLists.txt
towr/include/towr/: nlp_formulation.h  nlp_formulation_with_momentum.h  parameters.h
towr/include/towr/constraints/: base_motion_constraint.h  base_motion_constraint_with_momentum.h  com_tracking_constraint.h  dynamic_constraint_with_momentum.h  range_of_motion_constraint.h  range_of_motion_constraint_with_momentum.h  time_discretization_constraint.h
towr/src/: base_motion_constraint.cc  base_motion_constraint_with_momentum.cc  com_tracking_constraint.cc  com_tracking_cost.cc  dynamic_constraint_with_momentum.cc  ee_tracking_cost.cc  nlp_formulation.cc  nlp_formulation_with_momentum.cc  node_spline.cc  node_tracking_cost.cc  nodes_variables_phase_based.cc  parameters.cc  phase_durations.cc  polynomial.cc  range_of_motion_constraint.cc  range_of_motion_constraint_with_momentum.cc  robot_model.cc  spline_holder.cc  spline_holder_extended.cc  srbd_with_momentum.cc  state.cc  time_discretization_cost.cc
towr/test/: a1_example.cc  a1_example_with_momentum.cc  hopper_example_with_momentum.cc
towr_ros/launch/: towr_ros_a1.launch
towr_ros/rviz/: xpp_towr_a1.rviz
towr_ros/src/: rosbag_geom_msg_extractor.cc  towr_ros_app.cc
(+15 files in other folders)
