<?xml version="1.0"?>

<package format="2">
  <name>xpp_a1</name>
  <version>1.0.0</version>
  <description>
    A1 specific functions for visualization in the  XPP Motion Framework. 
    
    These include inverse kinematics as well as urdf files for the A1 robot built by 
    Unitree <a href="http://http://www.unitree.cc/">A1</a>
        
  </description>
  
  <author>Ziyi Zhou</author>
  <author email="zhouziyi@gatech.edu">Ziyi Zhou</author>
  <author email="depardo@ethz.ch">Diego Pardo.</author>
  <author email="carlos.mastalli@iit.it">Carlos Mastalli</author>
  <author email="ioannis@robots.ox.ac.uk">Ioannis Havoutis</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>roscpp</depend>
  <depend>xpp_vis</depend>
</package>